ref: change document tree and fix supplier field

--- a/custom-addons/material_registration/views/material_registration_views.xml
+++ b/custom-addons/material_registration/views/material_registration_views.xml
@@ -8,7 +8,7 @@
                 <field name="name"/>
                 <field name="material_type"/>
                 <field name="buy_price"/>
-                <field name="supplier_id" domain="[('is_supplier', '=', True)]"/>
+                <field name="supplier_id" domain="[('is_material_supplier', '=', True)]"/>
             </list>
         </field>
     </record>
@@ -24,7 +24,7 @@
                         <field name="name"/>
                         <field name="material_type"/>
                         <field name="buy_price"/>
-                <field name="supplier_id" domain="[('is_supplier', '=', True)]"/>
+                        <field name="supplier_id" domain="[('is_material_supplier', '=', True)]"/>
                     </group>
                 </sheet>
             </form>
